updating logo and favicon to match SOMOS.tech branding

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="https://static.wixstatic.com/media/0c204d_5f310ee2b2a848ceac8e68b25c0c39eb~mv2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Somos Tech</title>
+  <title>SOMOS.tech</title>
 </head>
 
 <body>
