Add payment capability detection for Apple Pay and Google Pay
- Added Apple Pay meta tags to support mobile wallet detection
- Created usePaymentCapabilities hook to detect device and payment support
- Detects Apple Pay via ApplePaySession API on Apple devices
- Detects Google Pay via Payment Request API
- Added visual indicators showing available payment methods
- Widget now has data attributes for payment capabilities
- Helps ensure users see Apple Pay on iOS/macOS and Google Pay on Android
- Console logs payment capabilities for debugging

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="https://static.wixstatic.com/media/0c204d_5f310ee2b2a848ceac8e68b25c0c39eb~mv2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Apple Pay meta tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  
+  <!-- Payment Request API support -->
+  <meta name="supported-color-schemes" content="light dark" />
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
