--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <script async src="https://widgets.givebutter.com/latest.umd.cjs?acct=kGqoXBY7xKV9XiHA&p=other"></script>
-  <title>SOMOS.tech</title>
+  <title>SOMOS.tech | Community and Programs</title>
 </head>
 
 <body>
